force-app/main/default/objects/CEMS_Registrations_Data__c/CEMS_Registrations_Data__c.object-meta.xml
<CustomObject>
    <label>Registrations Data</label>
    <nameField>
        <displayFormat>CEMS-{0000}</displayFormat>
        <label>Registration No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>