force-app/main/default/objects/CEMS_Registrations_Data__c/fields/CEMS_Confirm_Password__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Confirm_Password__c</fullName>
    <label>Confirm Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>