force-app/main/default/objects/CEMS_Registrations_Data__c/fields/CEMS_Education__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Education__c</fullName>
    <label>Education</label>
    <length>30</length>
    <type>Text</type>
</CustomField>