force-app/main/default/objects/CEMS_Registrations_Data__c/fields/CEMS_EMail__c.field-meta.xml
<CustomField>
    <fullName>CEMS_EMail__c</fullName>
    <label>EMail</label>
    <type>Email</type>
</CustomField>