force-app/main/default/objects/CEMS_Registrations_Data__c/fields/CEMS_Experience__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Experience__c</fullName>
    <label>Experience</label>
    <length>10</length>
    <type>Text</type>
</CustomField>