force-app/main/default/objects/CEMS_Registrations_Data__c/fields/CEMS_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_First_Name__c</fullName>
    <label>First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>