force-app/main/default/objects/CEMS_Registrations_Data__c/fields/CEMS_PAN_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>CEMS_PAN_Card_Number__c</fullName>
    <label>PAN Card Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>