force-app/main/default/objects/CEMS_Registrations_Data__c/fields/CEMS_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Phone_No__c</fullName>
    <label>Phone No</label>
    <type>Phone</type>
</CustomField>