force-app/main/default/objects/CEMS_Registrations_Data__c/fields/CEMS_Username__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Username__c</fullName>
    <label>Username</label>
    <type>Email</type>
</CustomField>